@@ -14,6 +14,7 @@ changes made.  See document footer for additional details.
 --- 2009-10-XX  Release 7.16.2                                     ---
 ----------------------------------------------------------------------
 
+* added -R non-recursive option to mged 'keep' command - Sean Morrison
 * fix crash of 'attach ogl' commands on OSX - Cliff Yapp
 * added option to change display managers in MGED - Cliff Yapp
 
